--- a/Apps/Zotero/docker-compose.yml
+++ b/Apps/Zotero/docker-compose.yml
@@ -37,10 +37,10 @@ x-casaos:
     en_us: Zotero is a free, easy-to-use tool to help you collect, organize, annotate, cite, and share research.
   tagline:
     en_us: A free, easy-to-use tool to help you collect, organize, annotate, cite, and share research.
-  developer: LinuxServer.io
+  developer: Hashed.Life
   author: WisdomSky
   icon: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/zotero-icon.png
   thumbnail: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/zotero-icon.png
   title:
     en_us: Zotero
-  category: LinuxServer.io
+  category: Hashed.Life
