--- a/Apps/Yq/docker-compose.yml
+++ b/Apps/Yq/docker-compose.yml
@@ -35,11 +35,11 @@ x-casaos:
     en_us: This container needs special attention. Please check https://hub.docker.com/r/linuxserver/yq for details.
   tagline:
     en_us: This container needs special attention. Please check https://hub. Docker. Com/r/linuxserver/yq for details.
-  developer: LinuxServer.io
+  developer: Hashed.Life
   author: WisdomSky
   icon: ''
   thumbnail: ''
   title:
     en_us: Yq
-  category: LinuxServer.io
+  category: Hashed.Life
   port_map: '80'
