--- a/Apps/Znc/docker-compose.yml
+++ b/Apps/Znc/docker-compose.yml
@@ -35,11 +35,11 @@ x-casaos:
     en_us: 'Visit homepage: https://hub.docker.com/r/linuxserver/znc/'
   tagline:
     en_us: An IRC network bouncer or BNC. It can detach the client from the actual IRC server, and also from selected channels. Multiple clients from different locations can connect to a single ZNC account simultaneously and therefore appear under the same nickname on IRC.
-  developer: LinuxServer.io
+  developer: Hashed.Life
   author: WisdomSky
   icon: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/znc-logo.png
   thumbnail: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/znc-logo.png
   title:
     en_us: Znc
-  category: LinuxServer.io
+  category: Hashed.Life
   project_url: http://wiki.znc.in/ZNC
