--- a/Apps/Znc/docker-compose.yml
+++ b/Apps/Znc/docker-compose.yml
@@ -36,7 +36,7 @@ x-casaos:
   tagline:
     en_us: An IRC network bouncer or BNC. It can detach the client from the actual IRC server, and also from selected channels. Multiple clients from different locations can connect to a single ZNC account simultaneously and therefore appear under the same nickname on IRC.
   developer: Hashed.Life
-  author: WisdomSky
+  author: the4tress
   icon: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/znc-logo.png
   thumbnail: https://raw.githubusercontent.com/linuxserver/docker-templates/master/linuxserver.io/img/znc-logo.png
   title:
